tests/cases/invalid/for-block-var-uses-let/example.mld
for @item in [1] [
  var @x = @item
]
